fixes #1944, table width updates when made visible

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1003,8 +1003,6 @@ h5 + .btn-download {
       }
     }
     table {
-      th, td { white-space: nowrap; }
-
       th {
         cursor: pointer;
 
